Revised copyright.txt

--- a/game.html
+++ b/game.html
@@ -30,7 +30,7 @@
     <main>
       <section id="win_popup" class="draggable" title="Click and drag to move">
         <h1 id="title" tabindex="0">YOU WIN!!!</h1>
-        <h2 id="text" tabindex="0">The universe is safe well done.</h2>
+        <h2 id="text" tabindex="0">The universe is safe. Well done.</h2>
         <span class="emoji" tabindex="0">🎉</span>
         <button id="win_popup_button" tabindex="0">OK</button>
       </section>
