Changed index.js and styles.css to title-screen. Added test music tracks for preproduction from Artist Skremzy. Added Music autoplay to title screen using mouseover.

--- a/game.html
+++ b/game.html
@@ -37,7 +37,7 @@
 
       <section id="lose_popup" class="draggable" title="Click and drag to move">
         <h1 id="title" tabindex="0">YOU LOSE!!!</h1>
-        <h2 id="text" tabindex="0">The universe blew up...</h2>
+        <h2 id="text" tabindex="0">Whoops! The universe blew up...</h2>
         <span class="emoji" tabindex="0">💥</span>
         <button id="lose_popup_button" tabindex="0">OK</button>
       </section>
@@ -55,7 +55,7 @@
           deactivate the bombs.
         </p>
         <h2 id="time_text" tabindex="0">
-          Time: <span id="time" tabindex="0">30</span>
+          Time: <span id="time" tabindex="0">45</span>
         </h2>
         <h2 id="score_text" tabindex="0">
           Score: <span id="score" tabindex="0">0</span>
