--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     />
     <!-- Stylesheet link -->
     <link rel="stylesheet" href="styles/normalize-fwd.css" />
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/title-screen.css" />
     <!-- Script link -->
-    <script src="scripts/index.js" defer></script>
+    <script src="scripts/title-screen.js" defer></script>
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
