Added pause/resume button. Styled button and added javascript to make it work.

--- a/game.html
+++ b/game.html
@@ -22,12 +22,21 @@
       href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Google material icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+ 
     <!-- Created by Aidan Yip -->
     <!-- Copyright Aidan Yip. 2024. -->
     <title>Bombtastic</title>
   </head>
   <body>
     <main>
+      <button id="pause_button">
+        <span class="material-symbols-outlined font_icon"> pause </span>
+      </button>
       <section id="win_popup" class="draggable" title="Click and drag to move">
         <h1 id="title" tabindex="0">YOU WIN!!!</h1>
         <h2 id="text" tabindex="0">The universe is safe. Well done.</h2>
@@ -66,79 +75,179 @@
       </section>
 
       <section id="game_window">
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
-        <button class="bomb_container" tabindex="0" aria-label="Bomb. Click to add to score.">
+        <button
+          class="bomb_container"
+          tabindex="0"
+          aria-label="Bomb. Click to add to score."
+        >
           <div class="bomb"></div>
         </button>
       </section>
