Added aria label to pause button for accessibility. Changed id title to class title.

--- a/game.html
+++ b/game.html
@@ -27,39 +27,36 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
- 
+
     <!-- Created by Aidan Yip -->
     <!-- Copyright Aidan Yip. 2024. -->
     <title>Bombtastic</title>
   </head>
   <body>
     <main>
-      <button id="pause_button">
-        <span class="material-symbols-outlined font_icon"> pause </span>
-      </button>
       <section id="win_popup" class="draggable" title="Click and drag to move">
-        <h1 id="title" tabindex="0">YOU WIN!!!</h1>
-        <h2 id="text" tabindex="0">The universe is safe. Well done.</h2>
+        <h1 class="title" tabindex="0">YOU WIN!!!</h1>
+        <h2 class="text" tabindex="0">The universe is safe. Well done.</h2>
         <span class="emoji" tabindex="0">🎉</span>
         <button id="win_popup_button" tabindex="0">OK</button>
       </section>
 
       <section id="lose_popup" class="draggable" title="Click and drag to move">
-        <h1 id="title" tabindex="0">YOU LOSE!!!</h1>
-        <h2 id="text" tabindex="0">Whoops! The universe blew up...</h2>
+        <h1 class="title" tabindex="0">YOU LOSE!!!</h1>
+        <h2 class="text" tabindex="0">Whoops! The universe blew up...</h2>
         <span class="emoji" tabindex="0">💥</span>
         <button id="lose_popup_button" tabindex="0">OK</button>
       </section>
 
       <section class="sidebar">
-        <h1 id="title" tabindex="0">Bombtastic</h1>
-        <h2 id="text" tabindex="0">Instructions:</h2>
-        <p id="text" tabindex="0">
+        <h1 class="title" tabindex="0">Bombtastic</h1>
+        <h2 class="text" tabindex="0">Instructions:</h2>
+        <p class="text" tabindex="0">
           The bombs will randomly cycle through being active and inactive.
           Deactivate 30 bombs within the time limit to save the universe!
         </p>
-        <h2 id="text" tabindex="0">Controls:</h2>
-        <p id="text" tabindex="0">
+        <h2 class="text" tabindex="0">Controls:</h2>
+        <p class="text" tabindex="0">
           Hover over the grid to select. Click on the white outlined boxes to
           deactivate the bombs.
         </p>
@@ -73,6 +70,10 @@
         <button id="start_button" tabindex="0">Start Game</button>
         <button id="reset_button" tabindex="0">Restart</button>
       </section>
+
+      <button id="pause_button" tabindex="0">
+        <span class="material-symbols-outlined font_icon"> pause </span>
+      </button>
 
       <section id="game_window">
         <button
