--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <main>
       <section>
-        <h1 id="title" tabindex="0">Bombtastic</h1>
+        <h1 class="title" tabindex="0">Bombtastic</h1>
         <button id="start_button" tabindex="0">Click/Tap to Start</button>
       </section>
     </main>
