Added favicon and icons to all pages. Created icons folder and web manifest.

--- a/game.html
+++ b/game.html
@@ -27,7 +27,22 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-
+    <!-- Favicon and icons -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/icons/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+    <link rel="shortcut icon" href="/icons/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/icons/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="Bombtastic" />
+    <link rel="manifest" href="/icons/site.webmanifest" />
     <!-- Created by Aidan Yip -->
     <!-- Copyright Aidan Yip. 2024. -->
     <title>Bombtastic</title>
