--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0 viewport-fit=cover"
     />
+    <meta name="theme-color" content="#002846" />
     <!-- Stylesheet link -->
     <link rel="stylesheet" href="styles/normalize-fwd.css" />
     <link rel="stylesheet" href="styles/title-screen.css" />
