--- a/game.html
+++ b/game.html
@@ -32,18 +32,18 @@
     <link
       rel="icon"
       type="image/png"
-      href="/icons/favicon-96x96.png"
+      href="icons/favicon-96x96.png"
       sizes="96x96"
     />
-    <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
-    <link rel="shortcut icon" href="/icons/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="icons/favicon.svg" />
+    <link rel="shortcut icon" href="icons/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/icons/apple-touch-icon.png"
+      href="icons/apple-touch-icon.png"
     />
     <meta name="apple-mobile-web-app-title" content="Bombtastic" />
-    <link rel="manifest" href="/icons/site.webmanifest" />
+    <link rel="manifest" href="icons/site.webmanifest" />
     <!-- Created by Aidan Yip -->
     <!-- Copyright Aidan Yip. 2024. -->
     <title>Bombtastic</title>
