Added bomb_defused sound. Added credit link for artist Skremzy for Music and Sound design.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <section>
         <h1 class="title" tabindex="0">Bombtastic</h1>
         <button id="start_button" tabindex="0">Click/Tap to Start</button>
+        <p>Music by <a href="https://skremzy.com">Skremzy</a></p>
       </section>
     </main>
   </body>
