Adjusted title page artist link text and style.  h1.game_title turn red on hover.

--- a/game.html
+++ b/game.html
@@ -65,7 +65,7 @@
       </section>
 
       <section class="sidebar">
-        <h1 class="title" tabindex="0">Bombtastic</h1>
+        <h1 class="title" id="game_title" tabindex="0">Bombtastic</h1>
         <h2 class="text" tabindex="0">Instructions:</h2>
         <p class="text" tabindex="0">
           The bombs will randomly cycle through being active and inactive.
