--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section>
         <h1 class="title" tabindex="0">Bombtastic</h1>
         <button id="start_button" tabindex="0">Click/Tap to Start</button>
-        <p>Music by <a href="https://skremzy.com" id="artist_link">Skremzy</a></p>
+        <p id="artist_text">Music by <a href="https://skremzy.com" id="artist_link">Skremzy</a></p>
       </section>
     </main>
   </body>
